welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:7: error: not found: value intersection
	} while (!intersection())
                  ^Poucet:8: error: not found: value n
	n match {
        ^